{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 1012,
  "lineage": "e37868b2-0083-3a31-6b15-f3eb09e344b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "systems-dev-logserver-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "systems-gateway-alb-log",
                "enabled": true,
                "prefix": "logserver-alb"
              }
            ],
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:loadbalancer/app/systems-dev-logserver-alb/3674495ecd97c2bd",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "systems-dev-logserver-alb",
            "security_groups": [
              "sg-0acecbe47b7bd6130"
            ],
            "subnets": [
              "subnet-0291f7df162a01c34",
              "subnet-04b370fb62ee7869c"
            ],
            "tags": {
              "Name": "systems-dev-logserver-alb",
              "Service": "systems-dev-logserver"
            },
            "tags_all": {
              "Name": "systems-dev-logserver-alb",
              "Service": "systems-dev-logserver"
            }
          },
          "dependencies": [
            "aws_s3_bucket.s3-alb",
            "aws_security_group.systems-dev-logserver-alb-sg",
            "aws_subnet.systems_dev_private_subnet1",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "grafana-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "kibana-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "prometheus-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "grafana-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/grafana-server-target-group/47dd6d808604e223",
            "arn_suffix": "targetgroup/grafana-server-target-group/47dd6d808604e223",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/grafana-server-target-group/47dd6d808604e223",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "grafana-server-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Grafana Server Target Group"
            },
            "tags_all": {
              "Name": "Grafana Server Target Group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "kibana-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/kibana-server-target-group/87050ca9c3ce3716",
            "arn_suffix": "targetgroup/kibana-server-target-group/87050ca9c3ce3716",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/kibana-server-target-group/87050ca9c3ce3716",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "kibana-server-target-group",
            "port": 5601,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Kibana Server Target Group"
            },
            "tags_all": {
              "Name": "Kibana Server Target Group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "prometheus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/prometheus-server-target-group/0d6d4e964661c21b",
            "arn_suffix": "targetgroup/prometheus-server-target-group/0d6d4e964661c21b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/prometheus-server-target-group/0d6d4e964661c21b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prometheus-server-target-group",
            "port": 9100,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Prometheus Server Target Group"
            },
            "tags_all": {
              "Name": "Prometheus Server Target Group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "grafana-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/grafana-server-target-group/47dd6d808604e223-2022052311262283460000000e",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/grafana-server-target-group/47dd6d808604e223",
            "target_id": "i-0800eeb2c975da73b"
          },
          "dependencies": [
            "aws_alb_target_group.grafana-server",
            "aws_default_security_group.systems_dev_default_sg",
            "aws_instance.systems_dev_logserver_instance",
            "aws_security_group.systems_dev_logserver_sg",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "kibana-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/kibana-server-target-group/87050ca9c3ce3716-2022052311262283420000000d",
            "port": 5601,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/kibana-server-target-group/87050ca9c3ce3716",
            "target_id": "i-0800eeb2c975da73b"
          },
          "dependencies": [
            "aws_alb_target_group.kibana-server",
            "aws_default_security_group.systems_dev_default_sg",
            "aws_instance.systems_dev_logserver_instance",
            "aws_security_group.systems_dev_logserver_sg",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "prometheus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/prometheus-server-target-group/0d6d4e964661c21b-2022052311262278290000000c",
            "port": 9100,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:807380035085:targetgroup/prometheus-server-target-group/0d6d4e964661c21b",
            "target_id": "i-0800eeb2c975da73b"
          },
          "dependencies": [
            "aws_alb_target_group.prometheus-server",
            "aws_default_security_group.systems_dev_default_sg",
            "aws_instance.systems_dev_logserver_instance",
            "aws_security_group.systems_dev_logserver_sg",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "systems_dev_default_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:network-acl/acl-08a287eb18e271dec",
            "default_network_acl_id": "acl-08a287eb18e271dec",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08a287eb18e271dec",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "807380035085",
            "subnet_ids": [
              "subnet-0291f7df162a01c34",
              "subnet-0b29202ac2881093e"
            ],
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "systems_eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:route-table/rtb-0f1ca11c586ce2bb9",
            "default_route_table_id": "rtb-0f1ca11c586ce2bb9",
            "id": "rtb-0f1ca11c586ce2bb9",
            "owner_id": "807380035085",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "systems_dev_default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:security-group/sg-01caef59793e04071",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01caef59793e04071",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "807380035085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "systems_dev_bastion_instance_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067ec2c1aa4753181",
            "association_id": "eipassoc-07c07549a60c92817",
            "domain": "vpc",
            "id": "eipalloc-067ec2c1aa4753181",
            "instance": "i-0d5a5161ba100ec4c",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f776b97409372a8d",
            "private_dns": "ip-10-2-1-217.ap-northeast-2.compute.internal",
            "private_ip": "10.2.1.217",
            "public_dns": "ec2-3-37-144-190.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.144.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.systems_dev_default_sg",
            "aws_instance.systems_dev_bastion_instance",
            "aws_internet_gateway.systems_dev_igw",
            "aws_security_group.systems_dev_bastion_sg",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_vpc.systems_eks_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "systems_dev_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbf55034fd231e5b",
            "domain": "vpc",
            "id": "eipalloc-0fbf55034fd231e5b",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-25-13.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.25.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.systems_dev_igw",
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "systems_dev_bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0195322846474ddb9",
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:instance/i-0d5a5161ba100ec4c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5a5161ba100ec4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "systems_ec2_auth_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f776b97409372a8d",
            "private_dns": "ip-10-2-1-217.ap-northeast-2.compute.internal",
            "private_ip": "10.2.1.217",
            "public_dns": "ec2-3-36-85-28.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.85.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-058d778f71ba2db31",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02013ac11439ff198",
            "tags": {
              "Name": "Bastion Host Instance"
            },
            "tags_all": {
              "Name": "Bastion Host Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01caef59793e04071",
              "sg-0f0036809a84c93ba"
            ]
          },
          "dependencies": [
            "aws_default_security_group.systems_dev_default_sg",
            "aws_security_group.systems_dev_bastion_sg",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_vpc.systems_eks_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "systems_dev_logserver_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0195322846474ddb9",
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:instance/i-0800eeb2c975da73b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0800eeb2c975da73b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "systems_ec2_auth_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058c6643038eb32bd",
            "private_dns": "ip-10-2-11-80.ap-northeast-2.compute.internal",
            "private_ip": "10.2.11.80",
            "public_dns": "ec2-3-36-71-147.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.71.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0fbb8546713bcaa6d",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0291f7df162a01c34",
            "tags": {
              "Name": "Log Server Instance"
            },
            "tags_all": {
              "Name": "Log Server Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01caef59793e04071",
              "sg-053039a6510d204da"
            ]
          },
          "dependencies": [
            "aws_default_security_group.systems_dev_default_sg",
            "aws_security_group.systems_dev_logserver_sg",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "systems_dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:internet-gateway/igw-0bfcdc734d464500f",
            "id": "igw-0bfcdc734d464500f",
            "owner_id": "807380035085",
            "tags": {
              "Name": "systems-dev-internet-gateway"
            },
            "tags_all": {
              "Name": "systems-dev-internet-gateway"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "systems_dev_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbf55034fd231e5b",
            "connectivity_type": "public",
            "id": "nat-033c44be13befefdb",
            "network_interface_id": "eni-0ce649ee786fdc5f1",
            "private_ip": "10.2.1.197",
            "public_ip": "3.37.25.13",
            "subnet_id": "subnet-02013ac11439ff198"
          },
          "dependencies": [
            "aws_eip.systems_dev_nat_eip",
            "aws_internet_gateway.systems_dev_igw",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "systems_dev_private_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:network-acl/acl-093afe5103c4e9ff0",
            "egress": [],
            "id": "acl-093afe5103c4e9ff0",
            "ingress": [],
            "owner_id": "807380035085",
            "subnet_ids": [
              "subnet-0291f7df162a01c34",
              "subnet-04b370fb62ee7869c"
            ],
            "tags": {
              "Name": "Private Network ACL"
            },
            "tags_all": {
              "Name": "Private Network ACL"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.systems_dev_private_subnet1",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "systems_dev_public_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:network-acl/acl-0b264f4262806fa2e",
            "egress": [],
            "id": "acl-0b264f4262806fa2e",
            "ingress": [],
            "owner_id": "807380035085",
            "subnet_ids": [
              "subnet-02013ac11439ff198",
              "subnet-0b29202ac2881093e"
            ],
            "tags": {
              "Name": "public Network ACL"
            },
            "tags_all": {
              "Name": "public Network ACL"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_private_egress443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-156183781",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-093afe5103c4e9ff0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_private_acl",
            "aws_subnet.systems_dev_private_subnet1",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_private_egress80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2464833674",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-093afe5103c4e9ff0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_private_acl",
            "aws_subnet.systems_dev_private_subnet1",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_private_egress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.0.0/16",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2446516134",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-093afe5103c4e9ff0",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_private_acl",
            "aws_subnet.systems_dev_private_subnet1",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_private_ingress_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4239886160",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-093afe5103c4e9ff0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_private_acl",
            "aws_subnet.systems_dev_private_subnet1",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_private_ingress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1694111647",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-093afe5103c4e9ff0",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_private_acl",
            "aws_subnet.systems_dev_private_subnet1",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_egress22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.0.0/16",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4068253122",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_egress443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2246201138",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_egress80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-507970397",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_egress_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-490813474",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_ingress22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-958051521",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_ingress443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2228279311",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_ingress80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1497760138",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "systems_dev_public_ingress_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2583653148",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b264f4262806fa2e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.systems_dev_public_acl",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "systems_dev_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bfcdc734d464500f",
            "id": "r-rtb-0f1ca11c586ce2bb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1ca11c586ce2bb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.systems_dev_igw",
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "systems_dev_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05ce8c1b9fa097b7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-033c44be13befefdb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05ce8c1b9fa097b7d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.systems_dev_nat_eip",
            "aws_internet_gateway.systems_dev_igw",
            "aws_nat_gateway.systems_dev_nat",
            "aws_route_table.systems_dev_private_route_table",
            "aws_subnet.systems_dev_public_subnet1",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "systems_dev_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:route-table/rtb-05ce8c1b9fa097b7d",
            "id": "rtb-05ce8c1b9fa097b7d",
            "owner_id": "807380035085",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "systems_dev_private_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07145e3fed4b7ec60",
            "route_table_id": "rtb-05ce8c1b9fa097b7d",
            "subnet_id": "subnet-04b370fb62ee7869c"
          },
          "dependencies": [
            "aws_route_table.systems_dev_private_route_table",
            "aws_subnet.systems_dev_private_subnet1",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "systems_dev_private_subnet2_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d5c574ec586f298",
            "route_table_id": "rtb-05ce8c1b9fa097b7d",
            "subnet_id": "subnet-0291f7df162a01c34"
          },
          "dependencies": [
            "aws_route_table.systems_dev_private_route_table",
            "aws_subnet.systems_dev_private_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "systems_dev_public_subnet1_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099c06cf8a370ecee",
            "route_table_id": "rtb-0f1ca11c586ce2bb9",
            "subnet_id": "subnet-02013ac11439ff198"
          },
          "dependencies": [
            "aws_subnet.systems_dev_public_subnet1",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "systems_dev_public_subnet2_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ed1c0928418b0cb",
            "route_table_id": "rtb-0f1ca11c586ce2bb9",
            "subnet_id": "subnet-0b29202ac2881093e"
          },
          "dependencies": [
            "aws_subnet.systems_dev_public_subnet2",
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "systems-dev-gateway-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:security-group/sg-0e91a9ad7e2ec8f8c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e91a9ad7e2ec8f8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2022052311260882400000000a",
            "name_prefix": "terraform-",
            "owner_id": "807380035085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "systems-dev-gateway-alb-sg",
              "Service": "DEV"
            },
            "tags_all": {
              "Name": "systems-dev-gateway-alb-sg",
              "Service": "DEV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "systems-dev-logserver-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:security-group/sg-0acecbe47b7bd6130",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acecbe47b7bd6130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "terraform-2022052311260948070000000b",
            "name_prefix": "terraform-",
            "owner_id": "807380035085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "systems-dev-logserver-alb-sg",
              "Service": "DEV"
            },
            "tags_all": {
              "Name": "systems-dev-logserver-alb-sg",
              "Service": "DEV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "systems-eks-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:security-group/sg-0cbc30ceb65f60a41",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbc30ceb65f60a41",
            "ingress": [],
            "name": "systems-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "807380035085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "systems-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "systems-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "systems_dev_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:security-group/sg-0f0036809a84c93ba",
            "description": "Security group for bastion instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0036809a84c93ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_instance_sg",
            "name_prefix": "",
            "owner_id": "807380035085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion Host Security Group"
            },
            "tags_all": {
              "Name": "Bastion Host Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "systems_dev_logserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:security-group/sg-053039a6510d204da",
            "description": "Security group for Log Server instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053039a6510d204da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5044,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5044
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "systems_dev_logserver_sg",
            "name_prefix": "",
            "owner_id": "807380035085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Log Server Instance Security Group"
            },
            "tags_all": {
              "Name": "Log Server Instance Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.systems_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "systems_dev_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:subnet/subnet-04b370fb62ee7869c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b370fb62ee7869c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807380035085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az1",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private-subnet-az1",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "systems_dev_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:subnet/subnet-0291f7df162a01c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0291f7df162a01c34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807380035085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az2",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private-subnet-az2",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "systems_dev_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:subnet/subnet-02013ac11439ff198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02013ac11439ff198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "807380035085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az1",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public-subnet-az1",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "systems_dev_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:subnet/subnet-0b29202ac2881093e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b29202ac2881093e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "807380035085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az2",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public-subnet-az2",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0c46c80eb059ca036"
          },
          "dependencies": [
            "aws_vpc.systems_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "systems_eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:807380035085:vpc/vpc-0c46c80eb059ca036",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-08a287eb18e271dec",
            "default_route_table_id": "rtb-0f1ca11c586ce2bb9",
            "default_security_group_id": "sg-01caef59793e04071",
            "dhcp_options_id": "dopt-08f9f747b5b5d6bed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c46c80eb059ca036",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1ca11c586ce2bb9",
            "owner_id": "807380035085",
            "tags": {
              "Name": "BithumbSystems EKS VPC",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "BithumbSystems EKS VPC",
              "kubernates.io/cluster/systems-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}